Fix version string

--- a/inc/config.h.in
+++ b/inc/config.h.in
@@ -2,6 +2,6 @@
 #define CONFIG_H
 
 #define PRJ_VERSION "@version@"
-#define PRJ_VERSION_STRING "termNote v@version@"
+#define PRJ_VERSION_STRING "notiz v@version@"
 
 #endif
